# jat

./: .gitignore  README.md  meson.build
doc/: example.jat  jat_lexer.gv
jat/: meson.build
jat/include/: jat.h  jat_decoder.h  jat_reader.h  jat_status.h  meson.build
jat/src/: jat_decoder.c  jat_platform.h  jat_reader.c  jat_reader_buffer.c  jat_reader_buffer.h  jat_reader_file.c  jat_reader_file.h  jat_utf8_decoder.h  meson.build
jat/test/: jat_decoder_test.c  jat_decoder_test.h  jat_reader_buffer_test.c  jat_reader_buffer_test.h  jat_test.c  meson.build
misc/: project_mac.vim  project_windows.vim
subprojects/: unity.wrap
